--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 user-scalable=no ">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="main.js">
@@ -291,8 +291,10 @@
         <div class="container">
             <div class="contact-us-content">
                 <div class="inputs">
-                    <input id="name" type="text" placeholder="Your Name">
-                    <input id="email" type="email" placeholder="Your Email">
+                    <div class="name-fields">
+                        <input id="name" type="text" placeholder="Your Name">
+                        <input id="email" type="email" placeholder="Your Email">
+                    </div>
                     <div class="message">
                         <textarea name="message" id="computer-view" cols="68" rows="10">Enter your Message</textarea>
                         <textarea name="message2" id="mobile-view" cols="37" rows="5">Enter your Message</textarea>
